k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-service
spec:
  selector:
    app.kubernetes.io/name: rest-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
